fix(frontend): event-duration spacing

--- a/packages/frontend/components/event-duration/styles.css
+++ b/packages/frontend/components/event-duration/styles.css
@@ -1,11 +1,7 @@
 event-duration {
+  --fieldset-flow-space: var(--space-s);
   align-items: end;
   column-gap: var(--space-xl);
   display: flex;
   flex-wrap: wrap;
-  margin-block-start: 0 !important;
-
-  & .field {
-    min-inline-size: 20ch;
-  }
 }
